applications/anatech-portal-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anatech-portal-api-service
  namespace: production
  labels:
    app: anatech-portal-api
spec:
  selector:
    app: anatech-portal-api
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
